# snappy

./: LICENSE  README.md  config-snappy.cabal  snappy-config.cabal
examples/PresarioV6000-MinDesktop/: Main.hs  automount.conf.file  portmaster.rc.file
src/: Main.hs  Snappy.hs
src/Config/: Snappy.hs
src/Config/Snappy/: Platform.hs  Shuffle.hs  System.hs
src/Config/Snappy/Platform/: FreeBSD.hs
src/Config/Snappy/Platform/FreeBSD/: PortTools.hs
src/Snappy/: Platform.hs  Platforms.hs  Primitives.hs  Scripts.hs  System.hs
src/Snappy/Platform/: FreeBSD.hs
