name:                snappy-config

-- A reminder about package versioning policy that Cabal (sometimes) follows
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1

synopsis:            Software management tool
description:         A library of various primitives for automatic software
                     installation
homepage:            http://github.com/ppenzin/snappy/
-- BSD2 license
license:             OtherLicense
license-file:        LICENSE
author:              Petr Penzin
maintainer:          penzin.dev@gmail.com
-- copyright:           
category:            System Tools
build-type:          Simple
cabal-version:       >=1.8
data-files:          

Library
  hs-source-dirs:      src
  exposed-modules:     Config.Snappy, Config.Snappy.Platform, Config.Snappy.Platform.FreeBSD, Config.Snappy.Shuffle, Config.Snappy.System
  build-depends:       base, process, directory

-- Test-suite test-all
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test, src
--   main-is:             TestAll.hs
--   build-depends:       base, text, aeson, yaml, bytestring, tasty, tasty-hunit, tasty-smallcheck, tasty-quickcheck
